Fixed selecting values from search bar
